<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">ReVanced Updater</string>
    <string name="revanced_info_title" translatable="false">YouTube ReVanced</string>
    <string name="installed_app_version">Installed: %1$s</string>
    <string name="latest_app_version">Latest: %1$s</string>
    <string name="update_status">Checking for updates…</string>
    <string name="update_available">Update available!</string>
    <string name="no_update_available">No update available</string>
    <string name="app_not_installed">App not installed</string>
    <string name="download_error">An error occurred while downloading. Check logs for more details.</string>
    <string name="music_info_title" translatable="false">ReVanced Music</string>
    <string name="revanced_download_button_description">Download ReVanced</string>
    <string name="none">none</string>
    <string name="music_download_button_description">Download ReVanced Music</string>
    <string name="microg_download_button_description">Download ReVanced GmsCore</string>
    <string name="updater_download_button_description">Download ReVanced Updater</string>
    <string name="invalid">invalid</string>
    <string name="invalid_version_detected">Invalid version detected. Uninstall existing apps.</string>
    <string name="microg_dialog_title">ReVanced GmsCore not installed</string>
    <string name="bottom_bar_about">About</string>
    <string name="download_button_text">Download</string>
    <string name="hold_app_card">Hold an app\'s card to open its changelog.</string>
    <string name="microg_info_title" translatable="false">ReVanced GmsCore</string>
    <string name="x_download_button_description">Download X</string>
    <string name="x_info_title" translatable="false">ReVanced X</string>
    <string name="disclaimer">LeddaZ is only responsible for ReVanced Updater, app issues are not under his control.</string>
    <string name="downloading">Downloading</string>
    <string name="settings">Settings</string>
    <string name="settings_desc">Choose which apps you want to see in the main page. ReVanced GmsCore will be shown automatically if YouTube, YouTube Music or both are enabled.</string>
    <string name="ok" translatable="false">OK</string>
    <string name="github">See on GitHub</string>
    <string name="rate_limit">GitHub rate limit, retry in a few minutes</string>
    <string name="delete_apk_button_text">Delete APKs</string>
    <string name="apks_deleted">Downloaded APKs deleted</string>
    <string name="json_error">Error while fetching JSON</string>
    <string name="newer_version_installed">Newer version installed</string>
    <string name="revanced_uninstall_button_description">Uninstall ReVanced</string>
    <string name="uninstall_button_text">Uninstall</string>
    <string name="music_uninstall_button_description">Uninstall ReVanced Music</string>
    <string name="microg_uninstall_button_description">Uninstall ReVanced GmsCore</string>
    <string name="x_uninstall_button_description">Uninstall ReVanced X</string>
</resources>
