<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/microGButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="?attr/rounded_corner_view"
        android:backgroundTint="@null"
        android:enabled="false"
        android:fontFamily="@font/inter_bold"
        android:onClick="downloadMicroG"
        android:text="@string/update_button"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/microGInfoSection" />

    <TextView
        android:id="@+id/microGUpdateStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="21dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/update_status"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/microGInfoSection"
        app:layout_constraintEnd_toEndOf="@+id/microGInfoSection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latestMicroGVersion" />

    <TextView
        android:id="@+id/latestMicroGVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:elevation="21dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/latest_app_version"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/microGInfoSection"
        app:layout_constraintTop_toBottomOf="@+id/installedMicroGVersion" />

    <TextView
        android:id="@+id/installedMicroGVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:elevation="21dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/installed_app_version"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/microGInfoSection"
        app:layout_constraintTop_toBottomOf="@+id/microGInfoSectionTitle" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/microGInfoSection"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/rounded_corner_view"
        android:elevation="20dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reVancedButton" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/titleBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/rounded_corner_view"
        android:elevation="5dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="21dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/titleBar"
        app:layout_constraintEnd_toEndOf="@+id/titleBar"
        app:layout_constraintStart_toStartOf="@+id/titleBar"
        app:layout_constraintTop_toTopOf="@+id/titleBar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/reVancedInfoSection"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/rounded_corner_view"
        android:elevation="20dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBar" />

    <TextView
        android:id="@+id/reVancedInfoSectionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="21dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/revanced_info_title"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/reVancedInfoSection"
        app:layout_constraintStart_toStartOf="@+id/reVancedInfoSection"
        app:layout_constraintTop_toTopOf="@+id/reVancedInfoSection" />

    <TextView
        android:id="@+id/installedReVancedVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:elevation="21dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/installed_app_version"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/reVancedInfoSection"
        app:layout_constraintTop_toBottomOf="@+id/reVancedInfoSectionTitle" />

    <TextView
        android:id="@+id/latestReVancedVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/latest_app_version"
        android:textSize="16sp"
        android:elevation="21dp"
        app:layout_constraintStart_toStartOf="@+id/reVancedInfoSection"
        app:layout_constraintTop_toBottomOf="@+id/installedReVancedVersion" />

    <TextView
        android:id="@+id/reVancedUpdateStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="21dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/update_status"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/reVancedInfoSection"
        app:layout_constraintEnd_toEndOf="@+id/reVancedInfoSection"
        app:layout_constraintStart_toStartOf="@+id/reVancedInfoSection"
        app:layout_constraintTop_toBottomOf="@+id/latestReVancedVersion" />

    <Button
        android:id="@+id/reVancedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="?attr/rounded_corner_view"
        android:enabled="false"
        android:fontFamily="@font/inter_bold"
        android:onClick="downloadReVanced"
        android:text="@string/update_button"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reVancedInfoSection" />

    <TextView
        android:id="@+id/microGInfoSectionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/microg_info_title"
        android:textAlignment="center"
        android:textSize="24sp"
        android:elevation="21dp"
        app:layout_constraintEnd_toEndOf="@+id/microGInfoSection"
        app:layout_constraintStart_toStartOf="@+id/microGInfoSection"
        app:layout_constraintTop_toTopOf="@+id/microGInfoSection" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/rounded_corner_view"
        android:contentDescription="@string/refresh_button_description"
        android:onClick="refreshButton"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/microGInfoSection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/reVancedButton"
        app:layout_constraintTop_toBottomOf="@+id/reVancedInfoSection"
        app:srcCompat="@drawable/refresh_button_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>
